# SDL2CMake-Template

./: CMakeLists.txt  README.md
include/: includes.h
src/: main.cpp
